--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width:auto;
 }
+.auto-font-size {
+    font-size: auto;
+}
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:bolder;
@@ -25,13 +28,19 @@ h3{
 .contenedor-principal{
     margin-top: 100px;
     margin-bottom: 100px;
-    align-items: center;
 }
 .contenedor-principal1{
     display: grid;
     width: auto;
-    grid-template-columns: 12% 20% 12% 20% 36%;
+    grid-template-columns: 18% 30% 18% 30%;
     padding: 50px;
+    align-items: center;
+}
+.contenedor-principal2{
+    display: grid;
+    width: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0px;
     align-items: center;
 }
 .contenedor{
@@ -40,6 +49,14 @@ h3{
     height: 50px;
     font-size:larger ;
     text-align: right;
+    padding: 5px;
+}
+.contenedorF{
+    display: flex;
+    flex-direction: column;
+    height: 50px;
+    font-size:larger ;
+    text-align: center;
     padding: 5px;
 }
 .contenedor1{
@@ -51,7 +68,6 @@ h3{
 .contenedor2{
     text-align: center;
     margin-top: 20px;
-    margin-right: 30px;
 }
 .contenedor3{
     display: grid;
@@ -79,4 +95,41 @@ footer{
     text-align: center;
     color: gray;
     margin-top: 50px;
+}
+@media (max-width: 940px) {
+    body {
+        background-color: rgb(245, 243, 124);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: small;
+        width:auto;
+    }
+    .auto-font-size {
+        font-size: auto;
+    }
+    .contenedor-principal1{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap:.8rem ;
+    }
+    .contenedor-principal2{
+        display: grid;
+        grid-template-columns: 3rem 50% 1rem;
+        row-gap:.8rem ;
+    }
+    .contenedor{
+        display: flex;
+        flex-direction: column;
+        height: 88%;
+        width: 88%;
+        font-size:small;
+        text-align: right;
+    }
+    .contenedorF{
+        display: flex;
+        flex-direction: column;
+        height: 88%;
+        width: 150%;
+        font-size:small;
+        text-align:center;
+    }
 }
